# test_static

./: package.json
client/: pnpm-lock.yaml  vite.config.ts
client/src/: main.tsx
client/src/components/: root-component.tsx  routes.tsx
client/src/components/pages/: blog.tsx  images.tsx  message.tsx
client/src/components/widgets/blog/: blog-list.tsx  use-messages.ts
client/src/components/widgets/chat/: chat-room.tsx  chat-widget.tsx  chat.tsx  room-list.tsx  services.ts  user-list.tsx
client/src/components/widgets/images/: edit-image.tsx  images-list.tsx  services.ts  use-images.ts
server/: .gitignore  README.md  main.py  pyproject.toml
server/api/: router_upload.py
