[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.4",
    "fastapi[standard]>=0.128.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
